--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   file_picker: ^8.1.7
   flutter_pdfview: ^1.4.0
   syncfusion_flutter_pdfviewer: ^28.1.37
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
