add success page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
     - assets/uploadAsnaf.png
     - assets/docAsnaf.png
     - assets/trash.png
+    - assets/hourglass.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
