--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   path: ^1.9.0
   firebase_core: ^3.9.0
   cloud_firestore: ^5.6.0
+  firebase_auth: ^5.3.4
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +68,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/google_icon.png
+    - assets/mail 1.png
+    - assets/student1.png
+    - assets/student2.png
+    - assets/google_icon.png
+    - assets/Search (1).png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
