--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^5.6.0
   firebase_auth: ^5.4.0
   google_sign_in: ^6.2.2
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
