--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,13 +72,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    - assets/google_icon.png
-    - assets/mail 1.png
-    - assets/student1.png
-    - assets/student2.png
-    - assets/google_icon.png
-    - assets/profileIcon9.png
-    - assets/check.png
+    - assets/applicationStatus1.png
+    - assets/applicationStatus2.png
+    - assets/applicationStatus3.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
