--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,9 +72,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    - assets/applicationStatus1.png
-    - assets/applicationStatus2.png
-    - assets/applicationStatus3.png
+    - assets/stock2.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
