--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_storage: ^12.4.3
   shared_preferences: ^2.3.5
   image: ^3.0.1
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
