--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,7 +73,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    - assets/stock2.png
+    - assets/pickup1.png
+    - assets/pickup2.png
+    - assets/pickup3.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
