--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   path_provider: ^2.1.5
   flutter_stripe: ^11.4.0
   flutter_dotenv: ^5.2.1
+  uni_links3: ^0.5.3
+  webview_flutter: ^4.10.0
 
 dev_dependencies:
   flutter_test:
