--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@google-cloud/storage": "^7.15.2",
     "canvas": "^3.1.0",
+    "dotenv": "^16.5.0",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.3.2"
   },
