--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,8 @@
     "canvas": "^3.1.0",
     "dotenv": "^16.5.0",
     "firebase-admin": "^12.7.0",
-    "firebase-functions": "^6.3.2"
+    "firebase-functions": "^6.3.2",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
