--- a/functions/package.json
+++ b/functions/package.json
@@ -14,11 +14,16 @@
   "main": "index.js",
   "dependencies": {
     "@google-cloud/storage": "^7.15.2",
+    "axios": "^1.9.0",
     "canvas": "^3.1.0",
+    "cheerio": "^1.0.0",
+    "csv-parse": "^5.6.0",
     "dotenv": "^16.5.0",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.3.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "parquetjs-lite": "^0.8.7",
+    "parquets": "^0.10.10"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
