--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   uni_links3: ^0.5.3
   webview_flutter: ^4.10.0
   firebase_messaging: ^15.2.5
+  http_parser: ^4.1.2
+  html: ^0.15.6
 
 dev_dependencies:
   flutter_test:
