--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   firebase_messaging: ^15.2.5
   http_parser: ^4.1.2
   html: ^0.15.6
+  mobile_scanner: ^6.0.10
+  qr_flutter: ^4.1.0
+  flutter_barcode_scanner: ^2.0.0
 
 dev_dependencies:
   flutter_test:
