--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,18 +46,21 @@ dependencies:
   firebase_storage: ^12.4.3
   shared_preferences: ^2.3.5
   image: ^3.0.1
-  http: ^1.3.0
+  http: ^1.4.0
   pdf: ^3.8.4
   mailer: ^6.4.1
   path_provider: ^2.1.5
   flutter_stripe: ^11.4.0
   flutter_dotenv: ^5.2.1
-  webview_flutter: ^4.10.0
+  webview_flutter: ^4.13.0
   firebase_messaging: ^15.2.5
   http_parser: ^4.1.2
   html: ^0.15.6
   mobile_scanner: ^6.0.10
   qr_flutter: ^4.1.0
+  app_links: ^6.4.0
+  webview_flutter_web: ^0.2.3+4
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
