--- a/functions/package.json
+++ b/functions/package.json
@@ -22,6 +22,7 @@
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.3.2",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.3",
     "parquetjs-lite": "^0.8.7",
     "parquets": "^0.10.10"
   },
