--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   webview_flutter_web: ^0.2.3+4
   url_launcher: ^6.3.1
   flutter_typeahead: ^5.2.0
+  google_mlkit_text_recognition: ^0.15.0
+  google_mlkit_face_detection: ^0.13.1
 
 dev_dependencies:
   flutter_test:
