--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   flutter_typeahead: ^5.2.0
   google_mlkit_text_recognition: ^0.15.0
   google_mlkit_face_detection: ^0.13.1
+  fl_chart: ^1.0.0
+  google_generative_ai: ^0.4.7
 
 dev_dependencies:
   flutter_test:
