adding more validation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   google_mlkit_face_detection: ^0.13.1
   fl_chart: ^1.0.0
   google_generative_ai: ^0.4.7
+  camera: 0.10.5+5
 
 dev_dependencies:
   flutter_test:
