--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   fl_chart: ^1.0.0
   google_generative_ai: ^0.4.7
   camera: 0.10.5+5
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
