--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,8 @@ dependencies:
   google_generative_ai: ^0.4.7
   camera: 0.10.5+5
   permission_handler: ^12.0.0+1
+  google_maps_flutter: ^2.12.2
+  geocoding: ^4.0.0
 
 dev_dependencies:
   flutter_test:
