--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   permission_handler: ^12.0.0+1
   google_maps_flutter: ^2.12.2
   geocoding: ^4.0.0
+  geolocator: ^11.0.0
 
 dev_dependencies:
   flutter_test:
