refining the key

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,6 +4,19 @@ plugins {
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
+def localProperties = new Properties()
+def localPropertiesFile = rootProject.file('local.properties')
+if (localPropertiesFile.exists()) {
+    localPropertiesFile.withReader('UTF-8') { reader ->
+        localProperties.load(reader)
+    }
+}
+
+def mapsApiKey = localProperties.getProperty('MAPS_API_KEY')
+if (mapsApiKey == null) {
+    // You can throw an error to make the build fail if the key is missing.
+    throw new GradleException("Missing MAPS_API_KEY in local.properties file.")
+}
 
 android {
     namespace = "com.example.projects"
@@ -28,6 +41,9 @@ android {
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+        manifestPlaceholders = [
+                'MAPS_API_KEY': mapsApiKey
+        ]
     }
 
     buildTypes {
